--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: pointmobile_scanner_advanced
-description: A Flutter plugin to manage Scanner for Pointmobile devices.
-version: 0.0.1
+description: A Flutter plugin to manage Scanner for Pointmobile devices. You can scan barcodes, get barcode information and customize built-in scanner settings through code.
+version: 0.0.4
 repository: https://github.com/KorayLiman/pointmobile_scanner_advanced
 issue_tracker: https://github.com/KorayLiman/pointmobile_scanner_advanced/issues
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: '>=2.19.6 <4.0.0'
   flutter: ">=2.5.0"
 
 dependencies:
